<resources>
    <string name="app_name">LogIn</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="administrative">Administrative</string>
    <string name="login_as">LogIn As :</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="password">Password</string>
    <string-array name="spin1">
        <item>Red</item>
        <item>MultiColor</item>
        <item>Black</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string-array name="siz">
        <item>Short</item>
        <item>Long</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXl</item>
    </string-array>
    <string name="login">LogIn</string>
    <string name="email">email</string>
    <string name="inventory">Inventory</string>
    <string name="product_name">Product Name</string>
    <string name="size_of_product">Size of Product</string>
    <string name="color">Color</string>
    <string name="add_new_product">Add new Product</string>
    <string name="select_product_details">Select Product Details</string>
    <string name="no_of_product">No of Product</string>
    <string name="available">Available</string>
    <string name="signout">SignOut</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="no_of_products1">No. of Products</string>
    <string name="cancel">Cancel</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="passcode">Passcode</string>
</resources>
