<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InvChanges">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="5dp"
                android:gravity="end"
                android:text="@string/select_product_details"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="italic" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/Signt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="5dp"
                android:text="@string/signout"
                android:textSize="12sp" />



        </LinearLayout>


        <Spinner
            android:id="@+id/spinnername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/Pvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:hint="@string/available"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/gtvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="5dp"   />

        <EditText
            android:id="@+id/getnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:ems="10"
            android:hint="@string/no_of_product"
            android:inputType="number"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/Addproduct"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/Removeproduct"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/remove" />
        </LinearLayout>

        <Button
            android:id="@+id/NewProduct1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="5dp"
            android:text="@string/add_new_product" />

    </LinearLayout>



</ScrollView>