<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/login_as"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/act1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="goToAnActivity1"
        android:padding="10dp"
        android:text="@string/administrative"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/act2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="goToAnotherActivity2"
        android:padding="10dp"
        android:text="@string/inventory_management"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

</LinearLayout>