<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Allog">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ProdName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ems="10"
            android:hint="@string/product_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/siz1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/size_of_product"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/siz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:entries="@array/siz"
            android:padding="5dp"
            android:tag="@string/size_of_product" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/color"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:entries="@array/spin1"
            android:padding="5dp"
            android:tag="@string/color" />

        <Button
            android:id="@+id/Addinv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/add_new_product"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>



</ScrollView>